--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,68 +5,67 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
-  - {name: 🇭🇰 香港-1.30MB/s(Youtube:不良林), server: azgy001.xiba1.xyz, port: 20712, type: trojan, password: 7497242f-3044-3c77-bf48-14bb26c92a83, sni: azgy001.xiba1.xyz, skip-cert-verify: true}
-  - {name: 🇫🇷 法国-403.4KB/s(Youtube:不良林), server: 54.37.192.112, port: 443, type: vmess, uuid: 9f58234c-355b-4065-ae21-d4a63099aba5, alterId: 64, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /path/120208301422, ws-headers: {Host: 54.37.192.112}}
+  - {name: 🇨🇳 中国-3.83MB/s(Youtube:不良林), server: hnyd.52147.top, port: 30130, type: trojan, password: 52a98419-efab-4c34-b4cc-4e2a7bc37029, sni: hnyd.52147.top, skip-cert-verify: true}
+  - {name: 🇨🇳 中国-248.2KB/s(Youtube:不良林), server: gzyd2.52147.top, port: 30120, type: trojan, password: 52a98419-efab-4c34-b4cc-4e2a7bc37029, sni: gzyd2.52147.top, skip-cert-verify: true}
+  - {name: 🇨🇳 中国-239.4KB/s(Youtube:不良林), server: gzyd1.52147.top, port: 20110, type: trojan, password: 841b229a-304f-46a2-a0fe-3b4e3e0e44f6, sni: gzyd1.52147.top, skip-cert-verify: true}
   - {name: 🇨🇳 中国-3.56MB/s(Youtube:不良林), server: gzyd2.52147.top, port: 20120, type: trojan, password: 841b229a-304f-46a2-a0fe-3b4e3e0e44f6, sni: gzyd2.52147.top, skip-cert-verify: true}
-  - {name: 🇨🇳 中国-7.54MB/s(Youtube:不良林), server: gzyd2.52147.top, port: 30130, type: trojan, password: 52a98419-efab-4c34-b4cc-4e2a7bc37029, sni: gzyd2.52147.top, skip-cert-verify: true}
-  - {name: 🇺🇸 美国-1.79MB/s(Youtube:不良林), server: s2.hazz.win, port: 12340, type: trojan, password: dfbf0d67-f03d-4184-a224-c2d64a571f99, sni: s2.hazz.win, skip-cert-verify: true}
-  - {name: 🇻🇳 越南-293.9KB/s(Youtube:不良林), server: 103.173.255.127, port: 28000, type: trojan, password: 52a98419-efab-4c34-b4cc-4e2a7bc37029, skip-cert-verify: true}
-  - {name: 🇨🇳 中国-210.8KB/s(Youtube:不良林), server: hnyd.52147.top, port: 30120, type: trojan, password: 52a98419-efab-4c34-b4cc-4e2a7bc37029, sni: hnyd.52147.top, skip-cert-verify: true}
-  - {name: 🇫🇷 法国-265.8KB/s(Youtube:不良林), server: 51.38.118.42, port: 811, type: ss, cipher: chacha20-ietf-poly1305, password: Ultr@r00t_2017}
-  - {name: 🇺🇸 美国-462.2KB/s(Youtube:不良林), server: s3.hazz.win, port: 12340, type: trojan, password: dfbf0d67-f03d-4184-a224-c2d64a571f99, sni: s3.hazz.win, skip-cert-verify: true}
+  - {name: 🇨🇳 中国-154.3KB/s(Youtube:不良林), server: hnyd.52147.top, port: 30120, type: trojan, password: 52a98419-efab-4c34-b4cc-4e2a7bc37029, sni: hnyd.52147.top, skip-cert-verify: true}
+  - {name: 🇫🇷 法国-233.2KB/s(Youtube:不良林), server: 51.38.118.42, port: 811, type: ss, cipher: chacha20-ietf-poly1305, password: Ultr@r00t_2017}
   - {name: 🇨🇳 台湾-2.08MB/s(Youtube:不良林), server: hinet.52147.top, port: 28000, type: trojan, password: 52a98419-efab-4c34-b4cc-4e2a7bc37029, sni: hinet.52147.top, skip-cert-verify: true}
+  - {name: 🇨🇳 中国-3.35MB/s(Youtube:不良林), server: hnyd.52147.top, port: 20120, type: trojan, password: 841b229a-304f-46a2-a0fe-3b4e3e0e44f6, sni: hnyd.52147.top, skip-cert-verify: true}
+  - {name: 🇦🇺 澳大利亚-497.1KB/s(Youtube:不良林), server: 185.167.116.250, port: 9043, type: ss, cipher: aes-256-cfb, password: HSZuyJQcWe8dxNdF}
+  - {name: 🇨🇳 中国-1.24MB/s(Youtube:不良林), server: 116.129.254.65, port: 63088, type: vmess, uuid: 352ba93c-fd92-3055-ad10-b3599ff2802f, alterId: 0, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /mugua, ws-headers: {Host: 116.129.254.65}}
 proxy-groups:
   - name: 🔰 节点选择
     type: select
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇭🇰 香港-1.30MB/s(Youtube:不良林)
-      - 🇫🇷 法国-403.4KB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.83MB/s(Youtube:不良林)
+      - 🇨🇳 中国-248.2KB/s(Youtube:不良林)
+      - 🇨🇳 中国-239.4KB/s(Youtube:不良林)
       - 🇨🇳 中国-3.56MB/s(Youtube:不良林)
-      - 🇨🇳 中国-7.54MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.79MB/s(Youtube:不良林)
-      - 🇻🇳 越南-293.9KB/s(Youtube:不良林)
-      - 🇨🇳 中国-210.8KB/s(Youtube:不良林)
-      - 🇫🇷 法国-265.8KB/s(Youtube:不良林)
-      - 🇺🇸 美国-462.2KB/s(Youtube:不良林)
+      - 🇨🇳 中国-154.3KB/s(Youtube:不良林)
+      - 🇫🇷 法国-233.2KB/s(Youtube:不良林)
       - 🇨🇳 台湾-2.08MB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.35MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-497.1KB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.24MB/s(Youtube:不良林)
   - name: ♻️ 自动选择
     type: url-test
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
-      - 🇭🇰 香港-1.30MB/s(Youtube:不良林)
-      - 🇫🇷 法国-403.4KB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.83MB/s(Youtube:不良林)
+      - 🇨🇳 中国-248.2KB/s(Youtube:不良林)
+      - 🇨🇳 中国-239.4KB/s(Youtube:不良林)
       - 🇨🇳 中国-3.56MB/s(Youtube:不良林)
-      - 🇨🇳 中国-7.54MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.79MB/s(Youtube:不良林)
-      - 🇻🇳 越南-293.9KB/s(Youtube:不良林)
-      - 🇨🇳 中国-210.8KB/s(Youtube:不良林)
-      - 🇫🇷 法国-265.8KB/s(Youtube:不良林)
-      - 🇺🇸 美国-462.2KB/s(Youtube:不良林)
+      - 🇨🇳 中国-154.3KB/s(Youtube:不良林)
+      - 🇫🇷 法国-233.2KB/s(Youtube:不良林)
       - 🇨🇳 台湾-2.08MB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.35MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-497.1KB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.24MB/s(Youtube:不良林)
   - name: 🌍 国外媒体
     type: select
     proxies:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇭🇰 香港-1.30MB/s(Youtube:不良林)
-      - 🇫🇷 法国-403.4KB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.83MB/s(Youtube:不良林)
+      - 🇨🇳 中国-248.2KB/s(Youtube:不良林)
+      - 🇨🇳 中国-239.4KB/s(Youtube:不良林)
       - 🇨🇳 中国-3.56MB/s(Youtube:不良林)
-      - 🇨🇳 中国-7.54MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.79MB/s(Youtube:不良林)
-      - 🇻🇳 越南-293.9KB/s(Youtube:不良林)
-      - 🇨🇳 中国-210.8KB/s(Youtube:不良林)
-      - 🇫🇷 法国-265.8KB/s(Youtube:不良林)
-      - 🇺🇸 美国-462.2KB/s(Youtube:不良林)
+      - 🇨🇳 中国-154.3KB/s(Youtube:不良林)
+      - 🇫🇷 法国-233.2KB/s(Youtube:不良林)
       - 🇨🇳 台湾-2.08MB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.35MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-497.1KB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.24MB/s(Youtube:不良林)
   - name: 🌏 国内媒体
     type: select
     proxies:
       - 🎯 全球直连
-      - 🇭🇰 香港-1.30MB/s(Youtube:不良林)
       - 🇨🇳 台湾-2.08MB/s(Youtube:不良林)
       - 🔰 节点选择
   - name: Ⓜ️ 微软服务
@@ -74,47 +73,47 @@ proxy-groups:
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
-      - 🇭🇰 香港-1.30MB/s(Youtube:不良林)
-      - 🇫🇷 法国-403.4KB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.83MB/s(Youtube:不良林)
+      - 🇨🇳 中国-248.2KB/s(Youtube:不良林)
+      - 🇨🇳 中国-239.4KB/s(Youtube:不良林)
       - 🇨🇳 中国-3.56MB/s(Youtube:不良林)
-      - 🇨🇳 中国-7.54MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.79MB/s(Youtube:不良林)
-      - 🇻🇳 越南-293.9KB/s(Youtube:不良林)
-      - 🇨🇳 中国-210.8KB/s(Youtube:不良林)
-      - 🇫🇷 法国-265.8KB/s(Youtube:不良林)
-      - 🇺🇸 美国-462.2KB/s(Youtube:不良林)
+      - 🇨🇳 中国-154.3KB/s(Youtube:不良林)
+      - 🇫🇷 法国-233.2KB/s(Youtube:不良林)
       - 🇨🇳 台湾-2.08MB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.35MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-497.1KB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.24MB/s(Youtube:不良林)
   - name: 📲 电报信息
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
-      - 🇭🇰 香港-1.30MB/s(Youtube:不良林)
-      - 🇫🇷 法国-403.4KB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.83MB/s(Youtube:不良林)
+      - 🇨🇳 中国-248.2KB/s(Youtube:不良林)
+      - 🇨🇳 中国-239.4KB/s(Youtube:不良林)
       - 🇨🇳 中国-3.56MB/s(Youtube:不良林)
-      - 🇨🇳 中国-7.54MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.79MB/s(Youtube:不良林)
-      - 🇻🇳 越南-293.9KB/s(Youtube:不良林)
-      - 🇨🇳 中国-210.8KB/s(Youtube:不良林)
-      - 🇫🇷 法国-265.8KB/s(Youtube:不良林)
-      - 🇺🇸 美国-462.2KB/s(Youtube:不良林)
+      - 🇨🇳 中国-154.3KB/s(Youtube:不良林)
+      - 🇫🇷 法国-233.2KB/s(Youtube:不良林)
       - 🇨🇳 台湾-2.08MB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.35MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-497.1KB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.24MB/s(Youtube:不良林)
   - name: 🍎 苹果服务
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇭🇰 香港-1.30MB/s(Youtube:不良林)
-      - 🇫🇷 法国-403.4KB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.83MB/s(Youtube:不良林)
+      - 🇨🇳 中国-248.2KB/s(Youtube:不良林)
+      - 🇨🇳 中国-239.4KB/s(Youtube:不良林)
       - 🇨🇳 中国-3.56MB/s(Youtube:不良林)
-      - 🇨🇳 中国-7.54MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.79MB/s(Youtube:不良林)
-      - 🇻🇳 越南-293.9KB/s(Youtube:不良林)
-      - 🇨🇳 中国-210.8KB/s(Youtube:不良林)
-      - 🇫🇷 法国-265.8KB/s(Youtube:不良林)
-      - 🇺🇸 美国-462.2KB/s(Youtube:不良林)
+      - 🇨🇳 中国-154.3KB/s(Youtube:不良林)
+      - 🇫🇷 法国-233.2KB/s(Youtube:不良林)
       - 🇨🇳 台湾-2.08MB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.35MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-497.1KB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.24MB/s(Youtube:不良林)
   - name: 🎯 全球直连
     type: select
     proxies:
@@ -130,16 +129,16 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇭🇰 香港-1.30MB/s(Youtube:不良林)
-      - 🇫🇷 法国-403.4KB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.83MB/s(Youtube:不良林)
+      - 🇨🇳 中国-248.2KB/s(Youtube:不良林)
+      - 🇨🇳 中国-239.4KB/s(Youtube:不良林)
       - 🇨🇳 中国-3.56MB/s(Youtube:不良林)
-      - 🇨🇳 中国-7.54MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.79MB/s(Youtube:不良林)
-      - 🇻🇳 越南-293.9KB/s(Youtube:不良林)
-      - 🇨🇳 中国-210.8KB/s(Youtube:不良林)
-      - 🇫🇷 法国-265.8KB/s(Youtube:不良林)
-      - 🇺🇸 美国-462.2KB/s(Youtube:不良林)
+      - 🇨🇳 中国-154.3KB/s(Youtube:不良林)
+      - 🇫🇷 法国-233.2KB/s(Youtube:不良林)
       - 🇨🇳 台湾-2.08MB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.35MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-497.1KB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.24MB/s(Youtube:不良林)
 rules:
  - DOMAIN-SUFFIX,local,🎯 全球直连
  - IP-CIDR,192.168.0.0/16,🎯 全球直连,no-resolve
