--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -7,14 +7,14 @@ external-controller: :9090
 proxies:
   - {name: 🇨🇳 中国-3.88MB/s(Youtube:不良林), server: gzyd2.52147.top, port: 30120, type: trojan, password: 52a98419-efab-4c34-b4cc-4e2a7bc37029, sni: gzyd2.52147.top, skip-cert-verify: true}
   - {name: 🇨🇳 中国-154.3KB/s(Youtube:不良林), server: hnyd.52147.top, port: 30120, type: trojan, password: 52a98419-efab-4c34-b4cc-4e2a7bc37029, sni: hnyd.52147.top, skip-cert-verify: true}
-  - {name: 🇨🇳 中国-239.4KB/s(Youtube:不良林), server: gzyd1.52147.top, port: 20110, type: trojan, password: 841b229a-304f-46a2-a0fe-3b4e3e0e44f6, sni: gzyd1.52147.top, skip-cert-verify: true}
-  - {name: 🇨🇳 中国-1.24MB/s(Youtube:不良林), server: 116.129.254.65, port: 63088, type: vmess, uuid: 352ba93c-fd92-3055-ad10-b3599ff2802f, alterId: 0, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /mugua, ws-headers: {Host: 116.129.254.65}}
-  - {name: 🇭🇰 香港-2.29MB/s(Youtube:不良林), server: azgy001.xiba1.xyz, port: 20712, type: trojan, password: 7497242f-3044-3c77-bf48-14bb26c92a83, sni: azgy001.xiba1.xyz, skip-cert-verify: true}
+  - {name: 🇺🇸 美国-546.3KB/s(Youtube:不良林), server: 138.68.248.130, port: 811, type: ss, cipher: chacha20-ietf-poly1305, password: Ultr@r00t_2017}
+  - {name: 🇨🇳 中国-4.46MB/s(Youtube:不良林), server: hnyd.52147.top, port: 30130, type: trojan, password: 52a98419-efab-4c34-b4cc-4e2a7bc37029, sni: hnyd.52147.top, skip-cert-verify: true}
   - {name: 🇯🇵 日本-213.1KB/s(Youtube:不良林), server: rbzz.jddsb.cf, port: 1003, type: vmess, uuid: 104ef5de-c177-464c-b3cc-6063a4afe97a, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /cctv13/hd.m3u8, ws-headers: {Host: rbzz.jddsb.cf}}
-  - {name: 🇫🇷 法国-338.0KB/s(Youtube:不良林), server: 54.37.192.112, port: 443, type: vmess, uuid: 9f58234c-355b-4065-ae21-d4a63099aba5, alterId: 64, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /path/120208301422, ws-headers: {Host: 54.37.192.112}}
-  - {name: 🇺🇸 美国-680.7KB/s(Youtube:不良林), server: s3.hazz.win, port: 12340, type: trojan, password: dfbf0d67-f03d-4184-a224-c2d64a571f99, sni: s3.hazz.win, skip-cert-verify: true}
   - {name: 🇨🇦 加拿大-535.1KB/s(Youtube:不良林), server: 138.197.166.205, port: 811, type: ss, cipher: chacha20-ietf-poly1305, password: Ultr@r00t_2017}
   - {name: 🇺🇸 美国-5.62MB/s(Youtube:不良林), server: 154.17.28.38, port: 49353, type: vmess, uuid: f762694a-948b-4918-a657-6ca9b10f2d32, alterId: 233, cipher: auto, tls: false, skip-cert-verify: true}
+  - {name: 🇻🇳 越南-4.84MB/s(Youtube:不良林), server: 103.173.255.127, port: 28000, type: trojan, password: 52a98419-efab-4c34-b4cc-4e2a7bc37029, skip-cert-verify: true}
+  - {name: 🇨🇳 中国-2.44MB/s(Youtube:不良林), server: gzyd1.52147.top, port: 30130, type: trojan, password: 52a98419-efab-4c34-b4cc-4e2a7bc37029, sni: gzyd1.52147.top, skip-cert-verify: true}
+  - {name: 🇺🇸 美国-203.1KB/s(Youtube:不良林), server: s2.hazz.win, port: 12340, type: trojan, password: dfbf0d67-f03d-4184-a224-c2d64a571f99, sni: s2.hazz.win, skip-cert-verify: true}
 proxy-groups:
   - name: 🔰 节点选择
     type: select
@@ -23,14 +23,14 @@ proxy-groups:
       - 🎯 全球直连
       - 🇨🇳 中国-3.88MB/s(Youtube:不良林)
       - 🇨🇳 中国-154.3KB/s(Youtube:不良林)
-      - 🇨🇳 中国-239.4KB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.24MB/s(Youtube:不良林)
-      - 🇭🇰 香港-2.29MB/s(Youtube:不良林)
+      - 🇺🇸 美国-546.3KB/s(Youtube:不良林)
+      - 🇨🇳 中国-4.46MB/s(Youtube:不良林)
       - 🇯🇵 日本-213.1KB/s(Youtube:不良林)
-      - 🇫🇷 法国-338.0KB/s(Youtube:不良林)
-      - 🇺🇸 美国-680.7KB/s(Youtube:不良林)
       - 🇨🇦 加拿大-535.1KB/s(Youtube:不良林)
       - 🇺🇸 美国-5.62MB/s(Youtube:不良林)
+      - 🇻🇳 越南-4.84MB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.44MB/s(Youtube:不良林)
+      - 🇺🇸 美国-203.1KB/s(Youtube:不良林)
   - name: ♻️ 自动选择
     type: url-test
     url: http://www.gstatic.com/generate_204
@@ -38,14 +38,14 @@ proxy-groups:
     proxies:
       - 🇨🇳 中国-3.88MB/s(Youtube:不良林)
       - 🇨🇳 中国-154.3KB/s(Youtube:不良林)
-      - 🇨🇳 中国-239.4KB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.24MB/s(Youtube:不良林)
-      - 🇭🇰 香港-2.29MB/s(Youtube:不良林)
+      - 🇺🇸 美国-546.3KB/s(Youtube:不良林)
+      - 🇨🇳 中国-4.46MB/s(Youtube:不良林)
       - 🇯🇵 日本-213.1KB/s(Youtube:不良林)
-      - 🇫🇷 法国-338.0KB/s(Youtube:不良林)
-      - 🇺🇸 美国-680.7KB/s(Youtube:不良林)
       - 🇨🇦 加拿大-535.1KB/s(Youtube:不良林)
       - 🇺🇸 美国-5.62MB/s(Youtube:不良林)
+      - 🇻🇳 越南-4.84MB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.44MB/s(Youtube:不良林)
+      - 🇺🇸 美国-203.1KB/s(Youtube:不良林)
   - name: 🌍 国外媒体
     type: select
     proxies:
@@ -54,19 +54,18 @@ proxy-groups:
       - 🎯 全球直连
       - 🇨🇳 中国-3.88MB/s(Youtube:不良林)
       - 🇨🇳 中国-154.3KB/s(Youtube:不良林)
-      - 🇨🇳 中国-239.4KB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.24MB/s(Youtube:不良林)
-      - 🇭🇰 香港-2.29MB/s(Youtube:不良林)
+      - 🇺🇸 美国-546.3KB/s(Youtube:不良林)
+      - 🇨🇳 中国-4.46MB/s(Youtube:不良林)
       - 🇯🇵 日本-213.1KB/s(Youtube:不良林)
-      - 🇫🇷 法国-338.0KB/s(Youtube:不良林)
-      - 🇺🇸 美国-680.7KB/s(Youtube:不良林)
       - 🇨🇦 加拿大-535.1KB/s(Youtube:不良林)
       - 🇺🇸 美国-5.62MB/s(Youtube:不良林)
+      - 🇻🇳 越南-4.84MB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.44MB/s(Youtube:不良林)
+      - 🇺🇸 美国-203.1KB/s(Youtube:不良林)
   - name: 🌏 国内媒体
     type: select
     proxies:
       - 🎯 全球直连
-      - 🇭🇰 香港-2.29MB/s(Youtube:不良林)
       - 🔰 节点选择
   - name: Ⓜ️ 微软服务
     type: select
@@ -75,14 +74,14 @@ proxy-groups:
       - 🔰 节点选择
       - 🇨🇳 中国-3.88MB/s(Youtube:不良林)
       - 🇨🇳 中国-154.3KB/s(Youtube:不良林)
-      - 🇨🇳 中国-239.4KB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.24MB/s(Youtube:不良林)
-      - 🇭🇰 香港-2.29MB/s(Youtube:不良林)
+      - 🇺🇸 美国-546.3KB/s(Youtube:不良林)
+      - 🇨🇳 中国-4.46MB/s(Youtube:不良林)
       - 🇯🇵 日本-213.1KB/s(Youtube:不良林)
-      - 🇫🇷 法国-338.0KB/s(Youtube:不良林)
-      - 🇺🇸 美国-680.7KB/s(Youtube:不良林)
       - 🇨🇦 加拿大-535.1KB/s(Youtube:不良林)
       - 🇺🇸 美国-5.62MB/s(Youtube:不良林)
+      - 🇻🇳 越南-4.84MB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.44MB/s(Youtube:不良林)
+      - 🇺🇸 美国-203.1KB/s(Youtube:不良林)
   - name: 📲 电报信息
     type: select
     proxies:
@@ -90,14 +89,14 @@ proxy-groups:
       - 🎯 全球直连
       - 🇨🇳 中国-3.88MB/s(Youtube:不良林)
       - 🇨🇳 中国-154.3KB/s(Youtube:不良林)
-      - 🇨🇳 中国-239.4KB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.24MB/s(Youtube:不良林)
-      - 🇭🇰 香港-2.29MB/s(Youtube:不良林)
+      - 🇺🇸 美国-546.3KB/s(Youtube:不良林)
+      - 🇨🇳 中国-4.46MB/s(Youtube:不良林)
       - 🇯🇵 日本-213.1KB/s(Youtube:不良林)
-      - 🇫🇷 法国-338.0KB/s(Youtube:不良林)
-      - 🇺🇸 美国-680.7KB/s(Youtube:不良林)
       - 🇨🇦 加拿大-535.1KB/s(Youtube:不良林)
       - 🇺🇸 美国-5.62MB/s(Youtube:不良林)
+      - 🇻🇳 越南-4.84MB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.44MB/s(Youtube:不良林)
+      - 🇺🇸 美国-203.1KB/s(Youtube:不良林)
   - name: 🍎 苹果服务
     type: select
     proxies:
@@ -106,14 +105,14 @@ proxy-groups:
       - ♻️ 自动选择
       - 🇨🇳 中国-3.88MB/s(Youtube:不良林)
       - 🇨🇳 中国-154.3KB/s(Youtube:不良林)
-      - 🇨🇳 中国-239.4KB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.24MB/s(Youtube:不良林)
-      - 🇭🇰 香港-2.29MB/s(Youtube:不良林)
+      - 🇺🇸 美国-546.3KB/s(Youtube:不良林)
+      - 🇨🇳 中国-4.46MB/s(Youtube:不良林)
       - 🇯🇵 日本-213.1KB/s(Youtube:不良林)
-      - 🇫🇷 法国-338.0KB/s(Youtube:不良林)
-      - 🇺🇸 美国-680.7KB/s(Youtube:不良林)
       - 🇨🇦 加拿大-535.1KB/s(Youtube:不良林)
       - 🇺🇸 美国-5.62MB/s(Youtube:不良林)
+      - 🇻🇳 越南-4.84MB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.44MB/s(Youtube:不良林)
+      - 🇺🇸 美国-203.1KB/s(Youtube:不良林)
   - name: 🎯 全球直连
     type: select
     proxies:
@@ -131,14 +130,14 @@ proxy-groups:
       - ♻️ 自动选择
       - 🇨🇳 中国-3.88MB/s(Youtube:不良林)
       - 🇨🇳 中国-154.3KB/s(Youtube:不良林)
-      - 🇨🇳 中国-239.4KB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.24MB/s(Youtube:不良林)
-      - 🇭🇰 香港-2.29MB/s(Youtube:不良林)
+      - 🇺🇸 美国-546.3KB/s(Youtube:不良林)
+      - 🇨🇳 中国-4.46MB/s(Youtube:不良林)
       - 🇯🇵 日本-213.1KB/s(Youtube:不良林)
-      - 🇫🇷 法国-338.0KB/s(Youtube:不良林)
-      - 🇺🇸 美国-680.7KB/s(Youtube:不良林)
       - 🇨🇦 加拿大-535.1KB/s(Youtube:不良林)
       - 🇺🇸 美国-5.62MB/s(Youtube:不良林)
+      - 🇻🇳 越南-4.84MB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.44MB/s(Youtube:不良林)
+      - 🇺🇸 美国-203.1KB/s(Youtube:不良林)
 rules:
  - DOMAIN-SUFFIX,local,🎯 全球直连
  - IP-CIDR,192.168.0.0/16,🎯 全球直连,no-resolve
