--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,14 +5,14 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
-  - {name: 🇨🇳 中国-3.14MB/s(Youtube:不良林), server: hnyd.52147.top, port: 30130, type: trojan, password: 52a98419-efab-4c34-b4cc-4e2a7bc37029, sni: hnyd.52147.top, skip-cert-verify: true}
-  - {name: 🇨🇳 中国-4.19MB/s(Youtube:不良林), server: gzyd2.52147.top, port: 30130, type: trojan, password: 52a98419-efab-4c34-b4cc-4e2a7bc37029, sni: gzyd2.52147.top, skip-cert-verify: true}
-  - {name: 🇨🇳 中国-3.66MB/s(Youtube:不良林), server: hnyd.52147.top, port: 20120, type: trojan, password: 841b229a-304f-46a2-a0fe-3b4e3e0e44f6, sni: hnyd.52147.top, skip-cert-verify: true}
+  - {name: 🇨🇳 中国-5.39MB/s(Youtube:不良林), server: gzyd2.52147.top, port: 30130, type: trojan, password: 52a98419-efab-4c34-b4cc-4e2a7bc37029, sni: gzyd2.52147.top, skip-cert-verify: true}
   - {name: 🇭🇰 香港-2.00MB/s(Youtube:不良林), server: azgy001.xiba1.xyz, port: 20712, type: trojan, password: 7497242f-3044-3c77-bf48-14bb26c92a83, sni: azgy001.xiba1.xyz, skip-cert-verify: true}
+  - {name: 🇨🇳 中国-181.5KB/s(Youtube:不良林), server: gzyd2.52147.top, port: 30120, type: trojan, password: 52a98419-efab-4c34-b4cc-4e2a7bc37029, sni: gzyd2.52147.top, skip-cert-verify: true}
+  - {name: 🇨🇳 中国-3.14MB/s(Youtube:不良林), server: hnyd.52147.top, port: 30130, type: trojan, password: 52a98419-efab-4c34-b4cc-4e2a7bc37029, sni: hnyd.52147.top, skip-cert-verify: true}
+  - {name: 🇨🇳 中国-3.66MB/s(Youtube:不良林), server: hnyd.52147.top, port: 20120, type: trojan, password: 841b229a-304f-46a2-a0fe-3b4e3e0e44f6, sni: hnyd.52147.top, skip-cert-verify: true}
+  - {name: 🇺🇸 美国-949.3KB/s(Youtube:不良林), server: 138.68.248.130, port: 811, type: ss, cipher: chacha20-ietf-poly1305, password: Ultr@r00t_2017}
   - {name: 🇺🇸 美国-4.19MB/s(Youtube:不良林), server: s3.hazz.win, port: 12340, type: trojan, password: dfbf0d67-f03d-4184-a224-c2d64a571f99, sni: s3.hazz.win, skip-cert-verify: true}
-  - {name: 🇺🇸 美国-5.62MB/s(Youtube:不良林), server: 154.17.28.38, port: 49353, type: vmess, uuid: f762694a-948b-4918-a657-6ca9b10f2d32, alterId: 233, cipher: auto, tls: false, skip-cert-verify: true}
-  - {name: 🇻🇳 越南-4.84MB/s(Youtube:不良林), server: 103.173.255.127, port: 28000, type: trojan, password: 52a98419-efab-4c34-b4cc-4e2a7bc37029, skip-cert-verify: true}
-  - {name: 🇨🇳 中国-2.44MB/s(Youtube:不良林), server: gzyd1.52147.top, port: 30130, type: trojan, password: 52a98419-efab-4c34-b4cc-4e2a7bc37029, sni: gzyd1.52147.top, skip-cert-verify: true}
+  - {name: 🇨🇦 加拿大-471.4KB/s(Youtube:不良林), server: 138.197.166.205, port: 811, type: ss, cipher: chacha20-ietf-poly1305, password: Ultr@r00t_2017}
   - {name: 🇺🇸 美国-203.1KB/s(Youtube:不良林), server: s2.hazz.win, port: 12340, type: trojan, password: dfbf0d67-f03d-4184-a224-c2d64a571f99, sni: s2.hazz.win, skip-cert-verify: true}
   - {name: 🇨🇳 中国-847.8KB/s(Youtube:不良林), server: gzyd1.52147.top, port: 20120, type: trojan, password: 841b229a-304f-46a2-a0fe-3b4e3e0e44f6, sni: gzyd1.52147.top, skip-cert-verify: true}
 proxy-groups:
@@ -21,14 +21,14 @@ proxy-groups:
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇨🇳 中国-3.14MB/s(Youtube:不良林)
-      - 🇨🇳 中国-4.19MB/s(Youtube:不良林)
-      - 🇨🇳 中国-3.66MB/s(Youtube:不良林)
+      - 🇨🇳 中国-5.39MB/s(Youtube:不良林)
       - 🇭🇰 香港-2.00MB/s(Youtube:不良林)
+      - 🇨🇳 中国-181.5KB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.14MB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.66MB/s(Youtube:不良林)
+      - 🇺🇸 美国-949.3KB/s(Youtube:不良林)
       - 🇺🇸 美国-4.19MB/s(Youtube:不良林)
-      - 🇺🇸 美国-5.62MB/s(Youtube:不良林)
-      - 🇻🇳 越南-4.84MB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.44MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-471.4KB/s(Youtube:不良林)
       - 🇺🇸 美国-203.1KB/s(Youtube:不良林)
       - 🇨🇳 中国-847.8KB/s(Youtube:不良林)
   - name: ♻️ 自动选择
@@ -36,14 +36,14 @@ proxy-groups:
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
-      - 🇨🇳 中国-3.14MB/s(Youtube:不良林)
-      - 🇨🇳 中国-4.19MB/s(Youtube:不良林)
-      - 🇨🇳 中国-3.66MB/s(Youtube:不良林)
+      - 🇨🇳 中国-5.39MB/s(Youtube:不良林)
       - 🇭🇰 香港-2.00MB/s(Youtube:不良林)
+      - 🇨🇳 中国-181.5KB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.14MB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.66MB/s(Youtube:不良林)
+      - 🇺🇸 美国-949.3KB/s(Youtube:不良林)
       - 🇺🇸 美国-4.19MB/s(Youtube:不良林)
-      - 🇺🇸 美国-5.62MB/s(Youtube:不良林)
-      - 🇻🇳 越南-4.84MB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.44MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-471.4KB/s(Youtube:不良林)
       - 🇺🇸 美国-203.1KB/s(Youtube:不良林)
       - 🇨🇳 中国-847.8KB/s(Youtube:不良林)
   - name: 🌍 国外媒体
@@ -52,14 +52,14 @@ proxy-groups:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇨🇳 中国-3.14MB/s(Youtube:不良林)
-      - 🇨🇳 中国-4.19MB/s(Youtube:不良林)
-      - 🇨🇳 中国-3.66MB/s(Youtube:不良林)
+      - 🇨🇳 中国-5.39MB/s(Youtube:不良林)
       - 🇭🇰 香港-2.00MB/s(Youtube:不良林)
+      - 🇨🇳 中国-181.5KB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.14MB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.66MB/s(Youtube:不良林)
+      - 🇺🇸 美国-949.3KB/s(Youtube:不良林)
       - 🇺🇸 美国-4.19MB/s(Youtube:不良林)
-      - 🇺🇸 美国-5.62MB/s(Youtube:不良林)
-      - 🇻🇳 越南-4.84MB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.44MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-471.4KB/s(Youtube:不良林)
       - 🇺🇸 美国-203.1KB/s(Youtube:不良林)
       - 🇨🇳 中国-847.8KB/s(Youtube:不良林)
   - name: 🌏 国内媒体
@@ -73,14 +73,14 @@ proxy-groups:
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
-      - 🇨🇳 中国-3.14MB/s(Youtube:不良林)
-      - 🇨🇳 中国-4.19MB/s(Youtube:不良林)
-      - 🇨🇳 中国-3.66MB/s(Youtube:不良林)
+      - 🇨🇳 中国-5.39MB/s(Youtube:不良林)
       - 🇭🇰 香港-2.00MB/s(Youtube:不良林)
+      - 🇨🇳 中国-181.5KB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.14MB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.66MB/s(Youtube:不良林)
+      - 🇺🇸 美国-949.3KB/s(Youtube:不良林)
       - 🇺🇸 美国-4.19MB/s(Youtube:不良林)
-      - 🇺🇸 美国-5.62MB/s(Youtube:不良林)
-      - 🇻🇳 越南-4.84MB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.44MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-471.4KB/s(Youtube:不良林)
       - 🇺🇸 美国-203.1KB/s(Youtube:不良林)
       - 🇨🇳 中国-847.8KB/s(Youtube:不良林)
   - name: 📲 电报信息
@@ -88,14 +88,14 @@ proxy-groups:
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
-      - 🇨🇳 中国-3.14MB/s(Youtube:不良林)
-      - 🇨🇳 中国-4.19MB/s(Youtube:不良林)
-      - 🇨🇳 中国-3.66MB/s(Youtube:不良林)
+      - 🇨🇳 中国-5.39MB/s(Youtube:不良林)
       - 🇭🇰 香港-2.00MB/s(Youtube:不良林)
+      - 🇨🇳 中国-181.5KB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.14MB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.66MB/s(Youtube:不良林)
+      - 🇺🇸 美国-949.3KB/s(Youtube:不良林)
       - 🇺🇸 美国-4.19MB/s(Youtube:不良林)
-      - 🇺🇸 美国-5.62MB/s(Youtube:不良林)
-      - 🇻🇳 越南-4.84MB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.44MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-471.4KB/s(Youtube:不良林)
       - 🇺🇸 美国-203.1KB/s(Youtube:不良林)
       - 🇨🇳 中国-847.8KB/s(Youtube:不良林)
   - name: 🍎 苹果服务
@@ -104,14 +104,14 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇨🇳 中国-3.14MB/s(Youtube:不良林)
-      - 🇨🇳 中国-4.19MB/s(Youtube:不良林)
-      - 🇨🇳 中国-3.66MB/s(Youtube:不良林)
+      - 🇨🇳 中国-5.39MB/s(Youtube:不良林)
       - 🇭🇰 香港-2.00MB/s(Youtube:不良林)
+      - 🇨🇳 中国-181.5KB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.14MB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.66MB/s(Youtube:不良林)
+      - 🇺🇸 美国-949.3KB/s(Youtube:不良林)
       - 🇺🇸 美国-4.19MB/s(Youtube:不良林)
-      - 🇺🇸 美国-5.62MB/s(Youtube:不良林)
-      - 🇻🇳 越南-4.84MB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.44MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-471.4KB/s(Youtube:不良林)
       - 🇺🇸 美国-203.1KB/s(Youtube:不良林)
       - 🇨🇳 中国-847.8KB/s(Youtube:不良林)
   - name: 🎯 全球直连
@@ -129,14 +129,14 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇨🇳 中国-3.14MB/s(Youtube:不良林)
-      - 🇨🇳 中国-4.19MB/s(Youtube:不良林)
-      - 🇨🇳 中国-3.66MB/s(Youtube:不良林)
+      - 🇨🇳 中国-5.39MB/s(Youtube:不良林)
       - 🇭🇰 香港-2.00MB/s(Youtube:不良林)
+      - 🇨🇳 中国-181.5KB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.14MB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.66MB/s(Youtube:不良林)
+      - 🇺🇸 美国-949.3KB/s(Youtube:不良林)
       - 🇺🇸 美国-4.19MB/s(Youtube:不良林)
-      - 🇺🇸 美国-5.62MB/s(Youtube:不良林)
-      - 🇻🇳 越南-4.84MB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.44MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-471.4KB/s(Youtube:不良林)
       - 🇺🇸 美国-203.1KB/s(Youtube:不良林)
       - 🇨🇳 中国-847.8KB/s(Youtube:不良林)
 rules:
